--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,17 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        def TWITTER_API_KEY = properties.getProperty("twitter_api_key", System.getenv("twitter_api_key"))
+        buildConfigField("String", "TWITTER_API_KEY", "\"${TWITTER_API_KEY}\"")
+        def TWITTER_API_SECRET = properties.getProperty("twitter_api_secret", System.getenv("twitter_api_secret"))
+        buildConfigField("String", "TWITTER_API_SECRET", "\"${TWITTER_API_SECRET}\"")
+        def TWITTER_ACCESS_TOKEN = properties.getProperty("twitter_access_token", System.getenv("twitter_access_token"))
+        buildConfigField("String", "TWITTER_ACCESS_TOKEN", "\"${TWITTER_ACCESS_TOKEN}\"")
+        def TWITTER_ACCESS_TOKEN_SECRET = properties.getProperty("twitter_access_token_secret", System.getenv("twitter_access_token_secret"))
+        buildConfigField("String", "TWITTER_ACCESS_TOKEN_SECRET", "\"${TWITTER_ACCESS_TOKEN_SECRET}\"")
+
         applicationId "com.example.yamashita.twinote"
         minSdkVersion 24
         targetSdkVersion 28
@@ -24,7 +35,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
@@ -32,4 +43,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'org.twitter4j:twitter4j-core:4.0.7'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 }
